@@ -11,6 +11,7 @@ libadouble_la_SOURCES = \
 	ad_mmap.c \
 	ad_open.c \
 	ad_read.c \
+	ad_recvfile.c \
 	ad_sendfile.c \
 	ad_size.c \
 	ad_write.c
